# Mandelbrot-ISPC-QT

./: .gitignore  CMakeLists.txt  DisplayWidget.h  README.md  build.sh  main.cpp
ispc/: Mandelbrot.ispc
